--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="status">
             <button id="reset">Reset</button>
             <p id="winner"></p>
         </div>
